fix naming on coverflow webpart

--- a/samples/react-VideoLibrary/src/webparts/videoLibraryCoverFlow/VideoLibraryCoverFlow.module.scss
+++ b/samples/react-VideoLibrary/src/webparts/videoLibraryCoverFlow/VideoLibraryCoverFlow.module.scss
@@ -1,4 +1,4 @@
-.videoLibraryCpverFlow {
+.videoLibraryCoverFlow {
 
   .container {
     max-width: 700px;
